--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^2.1.0
   cloud_firestore: ^4.0.2
   firebase_auth: ^4.0.2
+  email_validator: ^2.1.17
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
