--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^4.0.2
   email_validator: ^2.1.17
   http: ^0.13.5
+  flutter_riverpod: ^2.1.1
+  go_router: ^5.1.7
 
 dev_dependencies:
   flutter_test:
