--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,7 +16,6 @@
         {
             "label": "Run",
             "type": "shell",
-            // fluttercors --disable ; fluttercors --enable
             "command": "firebase emulators:start --import ./emulators_data --export-on-exit & flutter run -d chrome --dart-define=USE_FIREBASE_EMU=true ; pgrep -P $! | xargs kill ; wait $!",
             "dependsOn": "Test",
             "problemMatcher": [],
@@ -24,6 +23,13 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "label": "Release",
+            "type": "shell",
+            "dependsOn": "Test",
+            "command": "flutter build web --web-renderer html --release && firebase deploy",
+            "problemMatcher": [],
         }
     ]
 }
