--- a/firebase.json
+++ b/firebase.json
@@ -17,6 +17,15 @@
     "ui": {
       "enabled": true
     },
-    "singleProjectMode": true
+    "storage": {
+      "port": 9199
+    }
+  },
+  "storage": {
+    "rules": "storage.rules"
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
