--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   firebase_core: ^2.1.0
   cloud_firestore: ^4.0.2
   firebase_auth: ^4.0.2
   email_validator: ^2.1.17
-  http: ^0.13.5
   flutter_riverpod: ^2.1.1
   go_router: ^5.1.7
+  cloud_functions: ^4.0.4
+  firebase_storage: ^11.0.6
 
 dev_dependencies:
   flutter_test:
