--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   firebase_storage: ^11.0.6
   firebase_messaging: ^14.1.2
   http: ^0.13.5
+  firebase_remote_config: ^3.0.6
+  firebase_analytics: ^10.0.6
 
 dev_dependencies:
   flutter_test:
